fix listen and choose on ios

--- a/css/game.css
+++ b/css/game.css
@@ -197,8 +197,8 @@ select {
     width: 48%;
     height: 46%;
     margin-top: 12px;
-    margin-left: 4px;
-    margin-right: 4px;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 .div_listen_choose_choice_table {
     display: table;
